[gd_scene load_steps=6 format=3 uid="uid://c4e4qiit34e61"]

[ext_resource type="Script" uid="uid://ckgduwtqb52sv" path="res://addons/hyh.digression/editor/DialogueGraphEditorHost.gd" id="1_ynjxp"]
[ext_resource type="Texture2D" uid="uid://cokaiidw4802f" path="res://addons/hyh.digression/icons/icon_edit.svg" id="2_hvfrj"]
[ext_resource type="PackedScene" uid="uid://dkdmsbw1ph825" path="res://addons/hyh.digression/editor/DialogueGraphEditor.tscn" id="2_o6e7f"]
[ext_resource type="Texture2D" uid="uid://bglkyq1rksntd" path="res://addons/hyh.digression/icons/icon_play.svg" id="3_myoat"]
[ext_resource type="PackedScene" uid="uid://dd6hd0khfm6e3" path="res://addons/hyh.digression/editor/preview/DialogueGraphPreview.tscn" id="3_tt51u"]

[node name="DialogueGraphEditorHost" type="MarginContainer"]
offset_right = 977.0
offset_bottom = 609.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("1_ynjxp")

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HB" type="HBoxContainer" parent="VB"]
layout_mode = 2

[node name="ModeSwitch" type="HBoxContainer" parent="VB/HB"]
layout_mode = 2
size_flags_horizontal = 6

[node name="EditButton" type="Button" parent="VB/HB/ModeSwitch"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Edit"
icon = ExtResource("2_hvfrj")
flat = true

[node name="PreviewButton" type="Button" parent="VB/HB/ModeSwitch"]
layout_mode = 2
disabled = true
toggle_mode = true
text = "Preview"
icon = ExtResource("3_myoat")
flat = true

[node name="ModeContainer" type="MarginContainer" parent="VB"]
layout_mode = 2
size_flags_vertical = 3

[node name="Editor" parent="VB/ModeContainer" instance=ExtResource("2_o6e7f")]
layout_mode = 2

[node name="Preview" parent="VB/ModeContainer" instance=ExtResource("3_tt51u")]
visible = false
layout_mode = 2

[connection signal="toggled" from="VB/HB/ModeSwitch/EditButton" to="." method="_on_edit_button_toggled"]
[connection signal="toggled" from="VB/HB/ModeSwitch/PreviewButton" to="." method="_on_preview_button_toggled"]
[connection signal="expand_button_toggled" from="VB/ModeContainer/Editor" to="." method="_on_expand_button_toggled"]
[connection signal="not_previewable" from="VB/ModeContainer/Editor" to="." method="_on_editor_not_previewable"]
[connection signal="previewable" from="VB/ModeContainer/Editor" to="." method="_on_editor_previewable"]
[connection signal="starting_preview" from="VB/ModeContainer/Preview" to="." method="_on_preview_starting_preview"]
[connection signal="stopping_preview" from="VB/ModeContainer/Preview" to="." method="_on_preview_stopping_preview"]
